# rs-diamnet-strkey

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: crc.rs
tests/: debug.rs  tests.rs
